--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react-essentials-start",
   "version": "0.0.0",
+  "homepage": "https://github.com/abhay-tomar03/01-starting-project",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^4.3.9"
   },
   "keywords": [],
